--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,8 @@
     </div>
   </div>
 
-  <script src="/javascripts/log-viewer.js">
+  <input type="hidden" id="logFilePath" value="<%= logFile %>">
+
+  <script src="/javascripts/log-viewer.js"></script>
 
 <%- include("footer") %>
